[gd_scene load_steps=13 format=3 uid="uid://dnxivkjtchu37"]

[ext_resource type="Script" path="res://Backend/Code/Levels/Level5.gd" id="1_a4xml"]
[ext_resource type="Texture2D" uid="uid://dopfqygkv0cp8" path="res://Frontend/Recourses/GameStart.png" id="1_urn2l"]
[ext_resource type="Texture2D" uid="uid://0f6wmnlgh5fn" path="res://Frontend/Recourses/browser_13408985.png" id="2_ux6d1"]
[ext_resource type="Texture2D" uid="uid://berhbt8ceajj5" path="res://Frontend/Recourses/mail_9068642.png" id="3_3lxv4"]
[ext_resource type="Texture2D" uid="uid://cgr1ruanqrx1b" path="res://Frontend/Recourses/wallpaper_monitor.png" id="3_7cjjd"]
[ext_resource type="Texture2D" uid="uid://wj75lcanwg0g" path="res://Frontend/Recourses/vpn_9694717.png" id="5_ew4kv"]
[ext_resource type="PackedScene" uid="uid://dkrkk78fdiww6" path="res://Frontend/Scenes/Instruments/Email.tscn" id="6_xduh5"]
[ext_resource type="Texture2D" uid="uid://piktxiednwh" path="res://Frontend/Recourses/browser.png" id="6_ynsde"]
[ext_resource type="PackedScene" uid="uid://qxtpt0gymowq" path="res://Frontend/Scenes/Instruments/VPN.tscn" id="7_t61iy"]
[ext_resource type="PackedScene" uid="uid://j1gaj4y3ktw1" path="res://Frontend/Scenes/Instruments/WorkChat.tscn" id="8_amkrw"]
[ext_resource type="PackedScene" uid="uid://csuhyqjgu6da8" path="res://Frontend/Scenes/Instruments/RecordApp.tscn" id="9_c32w5"]
[ext_resource type="PackedScene" uid="uid://dpt2kcjnrcwgb" path="res://Frontend/Scenes/Instruments/Book.tscn" id="12_lpv26"]

[node name="Level5" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4xml")

[node name="GameStart" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_urn2l")
expand_mode = 1

[node name="Book_Button" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -251.0
offset_right = -130.0
offset_bottom = 47.0
grow_horizontal = 2
text = "Book"

[node name="Back_to_menu" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -111.0
offset_bottom = 47.0
grow_horizontal = 0
text = "Menu"

[node name="Wallpaper" type="TextureRect" parent="GameStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0407986
anchor_top = 0.095679
anchor_right = 0.976563
anchor_bottom = 0.82716
texture = ExtResource("3_7cjjd")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00649351
anchor_top = 0.0168776
anchor_right = 0.0844156
anchor_bottom = 0.21097
flat = true
metadata/_edit_use_anchors_ = true

[node name="Browser13408985" type="Sprite2D" parent="GameStart/Wallpaper/Button"]
position = Vector2(42.5, 48.9346)
scale = Vector2(0.148926, 0.147537)
texture = ExtResource("2_ux6d1")

[node name="Button2" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00371058
anchor_top = 0.204641
anchor_right = 0.0779221
anchor_bottom = 0.373418
flat = true
metadata/_edit_use_anchors_ = true

[node name="Mail9068642" type="Sprite2D" parent="GameStart/Wallpaper/Button2"]
position = Vector2(45, 45)
scale = Vector2(0.151367, 0.143892)
texture = ExtResource("3_3lxv4")

[node name="Button3" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00742115
anchor_top = 0.386076
anchor_right = 0.0853432
anchor_bottom = 0.561181
flat = true
metadata/_edit_use_anchors_ = true

[node name="Browser" type="Sprite2D" parent="GameStart/Wallpaper/Button3"]
position = Vector2(40, 43)
scale = Vector2(0.161377, 0.153749)
texture = ExtResource("6_ynsde")

[node name="Button4" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00649351
anchor_top = 0.561181
anchor_right = 0.0844156
anchor_bottom = 0.757384
flat = true
metadata/_edit_use_anchors_ = true

[node name="Vpn9694717" type="Sprite2D" parent="GameStart/Wallpaper/Button4"]
position = Vector2(42, 47)
scale = Vector2(0.150879, 0.142706)
texture = ExtResource("5_ew4kv")

[node name="List_of_tasks" type="Panel" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.806122
anchor_top = 0.00843882
anchor_right = 1.00093
anchor_bottom = 0.434599
metadata/_edit_use_anchors_ = true

[node name="Color_List_of_tasks" type="ColorRect" parent="GameStart/Wallpaper/List_of_tasks"]
modulate = Color(0.870588, 0.870588, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_List_of_task" type="TextEdit" parent="GameStart/Wallpaper/List_of_tasks"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0148515
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Task:
Open Email"
editable = false
metadata/_edit_use_anchors_ = true

[node name="Email" parent="GameStart/Wallpaper" instance=ExtResource("6_xduh5")]
visible = false
layout_mode = 1

[node name="Vpn" parent="GameStart/Wallpaper" instance=ExtResource("7_t61iy")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.739
anchor_top = 0.363
offset_left = 0.357971
offset_top = -0.0619965
offset_bottom = -1.0
metadata/_edit_use_anchors_ = true

[node name="WorkChat" parent="GameStart/Wallpaper" instance=ExtResource("8_amkrw")]
visible = false
layout_mode = 1

[node name="RecordApp" parent="GameStart/Wallpaper" instance=ExtResource("9_c32w5")]
visible = false
layout_mode = 1

[node name="Book" parent="GameStart/Wallpaper" instance=ExtResource("12_lpv26")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0343228
anchor_top = -0.0147679
anchor_right = 1.00835
anchor_bottom = 1.173
metadata/_edit_use_anchors_ = true

[node name="Next_day" type="Button" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.840278
anchor_top = 0.686728
anchor_right = 0.97309
anchor_bottom = 0.773148
offset_bottom = 3.05176e-05
text = "Next Day"
metadata/_edit_use_anchors_ = true

[node name="GameOver" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="GameOver"]
layout_mode = 0
anchor_left = 0.267361
anchor_top = 0.276235
anchor_right = 0.761285
anchor_bottom = 0.376543
offset_bottom = -1.52588e-05
text = "Game Over"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LineEdit2" type="LineEdit" parent="GameOver"]
layout_mode = 0
anchor_left = 0.352431
anchor_top = 0.408951
anchor_right = 0.665799
anchor_bottom = 0.45679
text = "You made to many  mistakes"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="GameOver"]
layout_mode = 0
anchor_left = 0.443576
anchor_top = 0.49537
anchor_right = 0.576389
anchor_bottom = 0.574074
text = "Back to menu"
metadata/_edit_use_anchors_ = true

[node name="Show_text" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.265625
anchor_top = 0.71142
anchor_right = 0.736111
anchor_bottom = 0.824074
editable = false
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="GameStart/Book_Button" to="." method="_on_book_button_pressed"]
[connection signal="pressed" from="GameStart/Back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Next_day" to="." method="_on_next_day_pressed"]
[connection signal="pressed" from="GameOver/Exit" to="." method="_on_exit_pressed"]
